k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: default
  labels:
    app: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
